feat: 웹 공유용 거래내역 api 추가
